--- a/Stage-02/Project-03/index.html
+++ b/Stage-02/Project-03/index.html
@@ -32,7 +32,7 @@
 
         <p>A informação é fundamental e de <strong>extrema importância</strong> para qualquer <br/>empresa.</p> 
         <br/>
-        <p>Aqui vai um <strong>texto</strong> como se fosse uma empresa de segurança da informação<br/>
+        <p>Aqui vai um <strong>texto</strong> como se fosse uma empresa de <span><strong>segurança da informação</strong></span><br/>
            apresentando o seu produto e com o texto todo estilizado.</p>
       </section>
 
