--- a/Stage-03/Project-01/index.html
+++ b/Stage-03/Project-01/index.html
@@ -19,7 +19,7 @@
       <p>O primeiro passo, é preencher esse
         formulário de inscrição.</p>
     </header>
-    <form>
+    <form id="my-form">
 
       <fieldset>
         <div class="fieldset-wrapper">
@@ -27,7 +27,7 @@
 
           <div class="input-wrapper">
             <label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-            <input type="text" id="event-title" />
+            <input required minlength="8" type="text" id="event-title" />
           </div>
   
           <div class="input-wrapper">
@@ -67,7 +67,7 @@
 
           <div class="input-wrapper">
             <label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
-            <input type="password" id="event-password" />
+            <input minlength="8" type="password" id="event-password" />
           </div>
 
           <div class="checkbox-wrapper">
@@ -99,7 +99,11 @@
           </div> 
         </div>
       </fieldset>
+
     </form>
+    <footer>
+      <input form="my-form" class="button" type="submit" value="Salvar evento">
+    </footer>
   </div>
 </body>
 </html>
